# jazz21

./: .gitignore  LICENSE  README.md  lydian_approach.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
scripts/: build_progressions.py  check_api_docs.py
site/: README.md  index.html  spike.html
site/armonia/: campo-armonico.html  cuatriadas.html  triadas.html
site/css/: biblioteca.css
site/guias/acordes/: describe-chord.html  normalizar.html
site/guias/guitarra/: diagramas.html
site/guias/manifest/: to-manifest.html
site/guias/notacion/: inversiones.html  progression.html
site/js/: campo-armonico.js  cm-python.js  progresiones-widget.js  progressions.json  pyodide-playground.js
site/python/: diccionarios.html  importar.html  venv.html
site/teoria/: acorde-diatonico.html  funcion-armonica.html  grado-vs-funcion.html  prestamo-modal.html
src/jazz21/: __init__.py  concepts.py  manifest.py  symbols.py
src/jazz21.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/jazz21/guitar/: __init__.py  diagram.py  render.py  resolve.py  shapes.py
src/jazz21/lydian/: __init__.py  system.py
src/jazz21/notation/: __init__.py  compose_engine.py
tests/: test_api_exports.py  test_chord_shape_utils.py  test_chord_symbol_normalizer.py  test_compose_engine.py  test_guitar_chord_shape_render.py  test_guitar_shape_resolve.py  test_harmonic_analysis.py  test_lydian_system.py  test_manifest.py  test_site_demos.py
web/: manage.py  run.sh
web/apps/lydian/: apps.py  urls.py  views.py
web/config/: settings.py  urls.py
(+1 files in other folders)
