[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jazz21"
version = "0.2.0"
description = "Jazz and lead-sheet notation layer on top of music21"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["music", "harmony", "jazz", "music21", "chord-analysis", "modal", "harmony-analysis"]
classifiers = [
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Intended Audience :: Education",
    "Natural Language :: Spanish",
]
dependencies = [
    "music21>=9.0",
]

[tool.setuptools]
license-files = ["LICENSE"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
guitar = [
    "fretsy>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
